Update 'backend-tests-dotnet-basic-mwgspkev' component image to: quay.io/rhtap_qe/backend-tests-dotnet-basic-mwgspkev:github-65141cd0f77ed295458f8f99fe2853b95da19379

--- a/components/backend-tests-dotnet-basic-mwgspkev/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-dotnet-basic-mwgspkev/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-dotnet-basic-mwgspkev
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-dotnet-basic-mwgspkev:github-65141cd0f77ed295458f8f99fe2853b95da19379
+          name: container-image
